# env-audit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  lib.rs  main.rs  types.rs
src/analysis/: missing.rs  mod.rs  naming.rs  unused.rs
src/languages/: csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs
src/output/: html.rs  json.rs  markdown.rs  mod.rs  terminal.rs
src/rules/: builtin.rs  mod.rs
src/scanner/: code_scanner.rs  env_parser.rs  file_walker.rs  mod.rs
