[package]
name = "env-audit"
version = "0.1.0"
edition = "2021"
description = "Scan projects for environment variable issues: missing vars, unused vars, inconsistent naming"
license = "MIT"
repository = "https://github.com/example/env-audit"
keywords = ["env", "environment", "dotenv", "lint", "audit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
ignore = "0.4"
rayon = "1"
anyhow = "1"
thiserror = "1"
comfy-table = { version = "7", features = ["tty"] }
colored = "2"
serde_json = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
